--- a/roles/deploy-postgresql/templates/service/db_backup.service.j2
+++ b/roles/deploy-postgresql/templates/service/db_backup.service.j2
@@ -1,1 +1,10 @@
-sdg
+[Unit]
+Description=DB Backup Script
+Wants=db_backup_{{ hospital }}.timer
+
+[Service]
+User={{ postgresql_user }}
+ExecStart=/usr/bin/bash -c '{{ script_location }}{{ db_backup_script }} > {{ pgsql_logrotate_log }}/{{ db_backup_log }} 2>&1'
+
+[Install]
+WantedBy=multi-user.target
